--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <!-- End Preloader -->
 		
 		<!-- Get Pro Button -->
-		<ul class="pro-features">
+		<!-- <ul class="pro-features">
 			<a class="get-pro" href="#">Get Pro</a>
 			<li class="big-title">Pro Version Available on Themeforest</li>
 			<li class="title">Pro Version Features</li>
@@ -76,7 +76,23 @@
 				<a href="https://themeforest.net/item/mediplus-medical-and-doctor-html-template/26665910" target="_blank" class="btn">Buy Pro Version</a>
 			</div>
 		</ul>
-	
+	 -->
+		<!-- Get Pro Button -->
+<ul class="pro-features">
+	<a class="get-pro" href="#contact">Contact Us</a>
+	<li class="big-title">Partner With Paridhi Agencies Today</li>
+	<li class="title">What We Can Help You With</li>
+	<li>Skilled staffing for hospice care</li>
+	<li>Flexible healthcare workforce support</li>
+	<li>Trusted professionals across Arizona</li>
+	<li>Personalized recruitment solutions</li>
+	<li>Prompt service with dedicated teams</li>
+	<div class="button">
+		<a href="#services" class="btn">View Our Services</a>
+		<a href="#contact" class="btn">Request a Callback</a>
+	</div>
+</ul>
+
 		<!-- Header Area -->
 		<header class="header" >
 			<!-- Topbar -->
@@ -113,7 +129,7 @@
 							<div class="col-lg-3 col-md-3 col-12">
 								<!-- Start Logo -->
 								<div class="logo">
-									<a href="index.html"><img src="img/logo.png" alt="#"></a>
+									<a href="index.html"><img style="height: 60px;" src="img/logolarge.png" alt="#"></a>
 								</div>
 								<!-- End Logo -->
 								<!-- Mobile Nav -->
@@ -171,7 +187,7 @@
 							<div class="col-lg-7">
 								<div class="text">
 									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>
+									<p>Delivering advanced surgical and diagnostic solutions from the world's leading medical innovators </p>
 									<div class="button">
 										<a href="#" class="btn">Get Appointment</a>
 										<a href="#" class="btn primary">Learn More</a>
@@ -188,8 +204,8 @@
 						<div class="row">
 							<div class="col-lg-7">
 								<div class="text">
-									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>
+									<h1>Delivering <span>Advanced</span> Healthcare Solutions Across <span>India</span></h1>
+									<p>From OT tables to vascular tools, we supply clinically proven technologies from global manufacturers you trust. </p>
 									<div class="button">
 										<a href="#" class="btn">Get Appointment</a>
 										<a href="#" class="btn primary">About Us</a>
@@ -206,8 +222,11 @@
 						<div class="row">
 							<div class="col-lg-7">
 								<div class="text">
-									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>
+									<!-- <h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p> -->
+									<h1>We Offer <span>Comprehensive</span> Staffing Solutions You Can <span>Rely On!</span></h1>
+<p>At Paridhi Agencies, we specialize in providing skilled staffing for your healthcare needs. Our team is dedicated to ensuring the highest level of care and professionalism.</p>
+
 									<div class="button">
 										<a href="#" class="btn">Get Appointment</a>
 										<a href="#" class="btn primary">Conatct Now</a>
