--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 													<li><a href="index.html">Home Page 1</a></li>
 												</ul>
 											</li>
-											<li><a href="#">About Us </a></li>
+											<li><a href="#why-choose">Who Are We </a></li>
 											<li><a href="#">Services </a></li>
 											<li><a href="#">Pages <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
@@ -312,7 +312,7 @@
 						<div class="section-title">
 							<h2>We Are Always Ready to Help You & Your Family</h2>
 							<img src="img/section-img.png" alt="#">
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
+							<p> At Paridhi Agencies, we ensure a hygienic and safe environment by using products from top healthcare brands like Meril, Omron, 3M, and Fresenius Kabi. Our cleanliness protocols meet the highest standards for the protection and well-being of all patients and staff.</p>
 						</div>
 					</div>
 				</div>
@@ -409,7 +409,7 @@
 		<!--/ End Fun-facts -->
 		
 		<!-- Start Why choose -->
-		<section class="why-choose section" >
+		<section id="why-choose" class="why-choose section" >
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
@@ -425,21 +425,21 @@
 						<!-- Start Choose Left -->
 						<div class="choose-left">
 							<h3>Who We Are</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pharetra antege vel est lobortis, a commodo magna rhoncus. In quis nisi non emet quam pharetra commodo. </p>
-							<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
+							<p>Paridhi Agencies is a trusted partner in providing exceptional staffing solutions. Our team is dedicated to offering top-tier professionals tailored to the needs of each client. Whether for long-term care or short-term staffing, we are committed to excellence. </p>
+							<p>We work collaboratively with healthcare providers to ensure the highest standards of care. Our focus is on enhancing patient experiences while maintaining a seamless staffing process. </p>
 							<div class="row">
 								<div class="col-lg-6">
 									<ul class="list">
-										<li><i class="fa fa-caret-right"></i>Maecenas vitae luctus nibh. </li>
-										<li><i class="fa fa-caret-right"></i>Duis massa massa.</li>
-										<li><i class="fa fa-caret-right"></i>Aliquam feugiat interdum.</li>
+										<li><i class="fa fa-caret-right"></i>Trusted Brands, Lasting Care</li>
+										<li><i class="fa fa-caret-right"></i>Excellence in Healthcare</li>
+										<li><i class="fa fa-caret-right"></i>Quality You Can Trust</li>
 									</ul>
 								</div>
 								<div class="col-lg-6">
 									<ul class="list">
-										<li><i class="fa fa-caret-right"></i>Maecenas vitae luctus nibh. </li>
-										<li><i class="fa fa-caret-right"></i>Duis massa massa.</li>
-										<li><i class="fa fa-caret-right"></i>Aliquam feugiat interdum.</li>
+										<li><i class="fa fa-caret-right"></i>Leading Care, Trusted Brands </li>
+										<li><i class="fa fa-caret-right"></i>Leading Brands, Trusted Care</li>
+										<li><i class="fa fa-caret-right"></i>Top Brands, Trusted Care</li>
 									</ul>
 								</div>
 							</div>
@@ -973,7 +973,7 @@
 									<div class="col-lg-6 col-md-6 col-12">
 										<ul>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Home</a></li>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>About Us</a></li>
+											<li><a href="#why-choose"><i class="fa fa-caret-right" aria-hidden="true"></i>About Us</a></li>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Services</a></li>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Our Cases</a></li>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Other Links</a></li>	
