change in HEADING

--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
 						<div class="row">
 							<div class="col-lg-7">
 								<div class="text">
-									<!-- <h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p> -->
-									<h1>We Offer <span>Comprehensive</span> Staffing Solutions You Can <span>Rely On!</span></h1>
+									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>  -->
+									<!-- <h1>We Offer <span>Comprehensive</span> Staffing Solutions You Can <span>Rely On!</span></h1> -->
 <p>At Paridhi Agencies, we specialize in providing skilled staffing for your healthcare needs. Our team is dedicated to ensuring the highest level of care and professionalism.</p>
 
 									<div class="button">
