--- a/index.html
+++ b/index.html
@@ -562,16 +562,17 @@
 						<div class="single-service">
 							<i class="icofont icofont-prescription"></i>
 							<h4><a href="service-details.html">General Treatment</a></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>	
+							<p>We supply essential medical consumables—surgical gloves, syringes, drapes and disposables—while providing reliable logistics and on-demand support for ongoing patient care. </p>	
 						</div>
 						<!-- End Single Service -->
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<!-- Start Single Service -->
 						<div class="single-service">
-							<i class="icofont icofont-tooth"></i>
-							<h4><a href="service-details.html">Teeth Whitening</a></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>	
+							<i class="icofont icofont-bone"></i>
+							<h4><a href="service-details.html">Orthopedic Implants</a></h4>
+							<p>We provide innovative joint-replacement systems and trauma fixation implants from Meril Ortho and Smith & Nephew.
+								Our services include logistics coordination and after-sales technical assistance to ensure procedural success. </p>	
 						</div>
 						<!-- End Single Service -->
 					</div>
@@ -579,8 +580,8 @@
 						<!-- Start Single Service -->
 						<div class="single-service">
 							<i class="icofont icofont-heart-alt"></i>
-							<h4><a href="service-details.html">Heart Surgery</a></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>	
+							<h4><a href="service-details.html">Cardiac Surgery</a></h4>
+							<p>Our cardiac surgery portfolio features heart valves and surgical consumables from Meril Life Sciences. We back these with dedicated order management and surgical team support to optimize patient outcomes  </p>	
 						</div>
 						<!-- End Single Service -->
 					</div>
