--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
 							<div class="col-lg-3 col-md-3 col-12">
 								<!-- Start Logo -->
 								<div class="logo">
-									<a href="index.html"><img src="img/logo.png" alt="#"></a>
+									<a href="index.html"><img src="img/logolarge.png" alt="paridhiagencies"></a>
 								</div>
 								<!-- End Logo -->
 								<!-- Mobile Nav -->
@@ -257,8 +257,11 @@
 							<div class="single-info">
 								<i class="icofont-google-map"></i>
 								<div class="content">
-									<h3>2 Fir e Brigade Road</h3>
-									<p>Chittagonj, Lakshmipur</p>
+									<h3> 11, 1st Floor, Kshitij Apartment
+										</h3>
+									<p>Tithal Road,  Valsad - 396001
+										Gujarat, India
+								   </p>
 								</div>
 							</div>
 						</div>
