--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 												</ul>
 											</li>
 											<li><a href="#why-choose">Who Are We </a></li>
-											<li><a href="#">Services </a></li>
+											<li><a href="#services">Services </a></li>
 											<li><a href="#">Pages <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
 													<li><a href="404.html">404 Error</a></li>
@@ -254,9 +254,9 @@
 										<i class="fa fa-ambulance"></i>
 									</div>
 									<div class="single-content">
-										<span>Lorem Amet</span>
-										<h4>Emergency Cases</h4>
-										<p>Lorem ipsum sit amet consectetur adipiscing elit. Vivamus et erat in lacus convallis sodales.</p>
+										<span>Emergency Care</span>
+										<h4>Ortho Trauma Implants</h4>
+										<p>We stock Meril Trauma fixation implants for emergency fracture care, ensuring rapid availability for critical orthopedic procedures.</p>
 										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
@@ -270,9 +270,9 @@
 										<i class="icofont-prescription"></i>
 									</div>
 									<div class="single-content">
-										<span>Fusce Porttitor</span>
-										<h4>Doctors Timetable</h4>
-										<p>Lorem ipsum sit amet consectetur adipiscing elit. Vivamus et erat in lacus convallis sodales.</p>
+										<span>Advanced Implants</span>
+										<h4>Joint Replacement Systems</h4>
+										<p>Our Meril Ortho joint replacement systems deliver durable hip and knee implants, backed by end-to-end logistics and expert technical support.</p>
 										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
@@ -286,13 +286,14 @@
 										<i class="icofont-ui-clock"></i>
 									</div>
 									<div class="single-content">
-										<span>Donec luctus</span>
-										<h4>Opening Hours</h4>
-										<ul class="time-sidual">
+										<span>Sterile Barrier</span>
+										<h4>Surgical Drapes</h4>
+										<p>We supply Primewear surgical drapes that offer superior barrier protection to maintain sterile operating fields and minimize infection risk.</p>
+										<!-- <ul class="time-sidual">We supply Primewear surgical drapes that offer superior barrier protection to maintain sterile operating fields and minimize infection risk.
 											<li class="day">Monday - Fridayp <span>8.00-20.00</span></li>
 											<li class="day">Saturday <span>9.00-18.30</span></li>
 											<li class="day">Monday - Thusday <span>9.00-15.00</span></li>
-										</ul>
+										</ul> -->
 										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
 								</div>
@@ -545,7 +546,7 @@
 		<!--/ End portfolio -->
 		
 		<!-- Start service -->
-		<section class="services section">
+		<section id="services" class="services section">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
@@ -975,7 +976,7 @@
 										<ul>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Home</a></li>
 											<li><a href="#why-choose"><i class="fa fa-caret-right" aria-hidden="true"></i>About Us</a></li>
-											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Services</a></li>
+											<li><a href="#services"><i class="fa fa-caret-right" aria-hidden="true"></i>Services</a></li>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Our Cases</a></li>
 											<li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Other Links</a></li>	
 										</ul>
