uodate on 29thapril

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 				</div>
 				<!-- End Single Slider -->
 				<!-- Start Single Slider -->
-				<div class="single-slider" style="background-image:url('img/slider.jpg')">
+				<div class="single-slider" style="background-image:url('img/PARIDHI AGENCIES2.png')">
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-7">
@@ -551,9 +551,11 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="section-title">
-							<h2>We Offer Different Services To Improve Your Health</h2>
+							<h2>Our Services</h2>
 							<img src="img/section-img.png" alt="#">
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
+							<p>We supply quality surgical, diagnostic and hospital essentials to support safe patient care.
+
+							</p>
 						</div>
 					</div>
 				</div>
@@ -581,7 +583,7 @@
 						<!-- Start Single Service -->
 						<div class="single-service">
 							<i class="icofont icofont-heart-alt"></i>
-							<h4><a href="service-details.html">Cardiac Surgery</a></h4>
+							<h4><a href="service-details.html">Cardiac Care Essentials</a></h4>
 							<p>Our cardiac surgery portfolio features heart valves and surgical consumables from Meril Life Sciences. We back these with dedicated order management and surgical team support to optimize patient outcomes  </p>	
 						</div>
 						<!-- End Single Service -->
@@ -589,27 +591,28 @@
 					<div class="col-lg-4 col-md-6 col-12">
 						<!-- Start Single Service -->
 						<div class="single-service">
-							<i class="icofont icofont-listening"></i>
-							<h4><a href="service-details.html">Ear Treatment</a></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>	
+							<i class="icofont icofont-nurse"></i>
+							<h4><a href="service-details.html">Patient Care Products</a></h4>
+							<p>	We deliver trusted products like baby care items, drapes and disposables designed to enhance patient comfort and safety in clinical settings.</p>	
 						</div>
 						<!-- End Single Service -->
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<!-- Start Single Service -->
 						<div class="single-service">
-							<i class="icofont icofont-eye-alt"></i>
-							<h4><a href="service-details.html">Vision Problems</a></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>	
+							<!-- <i class="icofont icofont-eye-alt"></i> -->
+							<i class="	icofont icofont-hospital"></i>
+							<h4><a href="service-details.html">Hospital Supplies</a></h4>
+							<p>We ensure consistent supply of hospital-use essentials like gloves, syringes and disposables, supporting operational efficiency across healthcare facilities. </p>	
 						</div>
 						<!-- End Single Service -->
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<!-- Start Single Service -->
 						<div class="single-service">
-							<i class="icofont icofont-blood"></i>
-							<h4><a href="service-details.html">Blood Transfusion</a></h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum eros ut imperdiet. </p>	
+							<i class="icofont icofont-microscope"></i>
+							<h4><a href="service-details.html">Diagnostic Equipment</a></h4>
+							<p>We offer diagnostic kits and medical testing devices from trusted brands, helping labs and healthcare providers deliver accurate patient care. </p>	
 						</div>
 						<!-- End Single Service -->
 					</div>
