--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 											</li>
 											<li><a href="#why-choose">Who Are We </a></li>
 											<li><a href="#services">Services </a></li>
-											<li><a href="#">Pages <i class="icofont-rounded-down"></i></a>
+											<li><a href="#">Products <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
 													<li><a href="404.html">404 Error</a></li>
 												</ul>
@@ -746,9 +746,9 @@
 							</div>
 							<div class="news-body">
 								<div class="news-content">
-									<div class="date">22 Aug, 2020</div>
-									<h2><a href="blog-single.html">We have annnocuced our new product.</a></h2>
-									<p class="text">Lorem ipsum dolor a sit ameti, consectetur adipisicing elit, sed do eiusmod tempor incididunt sed do incididunt sed.</p>
+									<div class="date">Meril Ortho</div>
+									<h2><a href="blog-single.html">Precision-driven joint replacement solutions.</a></h2>
+									<p class="text">Designed for superior patient mobility and long-term implant success, Meril Ortho delivers cutting-edge joint replacement systems backed by clinical excellence and innovation.</p>
 								</div>
 							</div>
 						</div>
