--- a/index.html
+++ b/index.html
@@ -148,14 +148,15 @@
 											</li>
 											<li><a href="#why-choose">Who Are We </a></li>
 											<li><a href="#services">Services </a></li>
-											<li><a href="#">Products <i class="icofont-rounded-down"></i></a>
+											<li><a href="#products">Products <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
 													<li><a href="404.html">404 Error</a></li>
 												</ul>
 											</li>
 											<li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="blog-single.html">Blog Details</a></li>
+													<li><a href="blog-single.html">
+														Blog Details</a></li>
 												</ul>
 											</li>
 											<li><a href="contact.html">Contact Us</a></li>
@@ -726,12 +727,13 @@
 		
 		
 		<!-- Start Blog Area -->
-		<section class="blog section" id="blog">
+		 <!-- earlier it was id="blog" -->
+		<section id="products" class="blog section" > 
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="section-title">
-							<h2>Keep up with Our Most Recent Medical News.</h2>
+							<h2>Our Producs </h2>
 							<img src="img/section-img.png" alt="#">
 							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
 						</div>
