--- a/index.html
+++ b/index.html
@@ -764,9 +764,9 @@
 							</div>
 							<div class="news-body">
 								<div class="news-content">
-									<div class="date">15 Jul, 2020</div>
-									<h2><a href="blog-single.html">Top five way for solving teeth problems.</a></h2>
-									<p class="text">Lorem ipsum dolor a sit ameti, consectetur adipisicing elit, sed do eiusmod tempor incididunt sed do incididunt sed.</p>
+									<div class="date">3M India Ltd.</div>
+									<h2><a href="blog-single.html">Advancing healthcare with trusted science.</a></h2>
+									<p class="text">From medical tapes to surgical supplies, 3M India Ltd. brings reliable healthcare innovations that improve efficiency, safety and patient outcomes in clinical environments.</p>
 								</div>
 							</div>
 						</div>
@@ -780,9 +780,10 @@
 							</div>
 							<div class="news-body">
 								<div class="news-content">
-									<div class="date">05 Jan, 2020</div>
-									<h2><a href="blog-single.html">We provide highly business soliutions.</a></h2>
-									<p class="text">Lorem ipsum dolor a sit ameti, consectetur adipisicing elit, sed do eiusmod tempor incididunt sed do incididunt sed.</p>
+									<div class="date">Babyhug Diapers</div>
+									<h2><a href="blog-single.html">Soft, safe and ultra-absorbent care.</a></h2>
+									<p class="text">Soft, safe and ultra-absorbent care
+										Description: With up to 12 hours of dryness and skin-friendly material, Babyhug Diapers offer worry-free comfort for your baby—trusted by parents across India.</p>
 								</div>
 							</div>
 						</div>
