added images and products

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	 -->
 		<!-- Get Pro Button -->
 <ul class="pro-features">
-	<a class="get-pro" href="#contact">Contact Us</a>
+	<a class="get-pro" href="#contact">Connect</a>
 	<li class="big-title">Partner With Paridhi Agencies Today</li>
 	<li class="title">What We Can Help You With</li>
 	<li>Skilled staffing for hospice care</li>
@@ -113,7 +113,7 @@
 							<!-- Top Contact -->
 							<ul class="top-contact">
 								<li><i class="fa fa-phone"></i>+880 1234 56789</li>
-								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">support@yourmail.com</a></li>
+								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">  paridhi.amul@gmail.com</a></li>
 							</ul>
 							<!-- End Top Contact -->
 						</div>
@@ -146,13 +146,23 @@
 													<li><a href="index.html">Home Page 1</a></li>
 												</ul>
 											</li>
-											<li><a href="#why-choose">Who Are We </a></li>
-											<li><a href="#services">Services </a></li>
+											<li><a href="#why-choose">About us </a></li>
+									
 											<li><a href="#products">Products <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="404.html">404 Error</a></li>
+													<li><a href="404.html">Disposable Medical Supplies
+													</a></li>
+													<li><a href="404.html">Hospital Furniture
+													</a></li>
+													<li><a href="404.html">Medical Equipment
+													</a></li>
+													<li><a href="404.html">Diagnostic Laboratory Products
+													</a></li>
+													<li><a href="404.html">Rehabilitation Products
+													</a></li>
 												</ul>
 											</li>
+											<li><a href="#services">Services </a></li>
 											<li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
 													<li><a href="blog-single.html">
@@ -416,9 +426,9 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="section-title">
-							<h2>We Offer Different Services To Improve Your Health</h2>
+							<h2>ABOUT US</h2>
 							<img src="img/section-img.png" alt="#">
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
+							<p>Empowering Healthcare with Trusted Solutions for 30 Years.</p>
 						</div>
 					</div>
 				</div>
@@ -426,9 +436,9 @@
 					<div class="col-lg-6 col-12">
 						<!-- Start Choose Left -->
 						<div class="choose-left">
-							<h3>Who We Are</h3>
-							<p>Paridhi Agencies is a trusted partner in providing exceptional staffing solutions. Our team is dedicated to offering top-tier professionals tailored to the needs of each client. Whether for long-term care or short-term staffing, we are committed to excellence. </p>
-							<p>We work collaboratively with healthcare providers to ensure the highest standards of care. Our focus is on enhancing patient experiences while maintaining a seamless staffing process. </p>
+							<h3>Know About us</h3>
+							<p>With over 30 years of legacy, Paridhi Agencies stands tall as a trusted name in the wholesale distribution of medical, surgical and hospital essentials. Based in Vapi-Valsad, we specialize in providing hospitals and healthcare providers with high-quality disposable surgical supplies, diagnostic laboratory equipment, hospital furniture, linens, instruments and rehabilitation products. Our offerings reflect a deep-rooted commitment to safety, precision and hygiene—delivering solutions that meet strict industry standards while supporting modern patient care environments. </p>
+							<p>Spearheaded by Mr. Amul Patel, an award-winning young business entrepreneur and an active member of the BNI ASEEM family, Paridhi Agencies embodies youthful energy with an unwavering vision for advancing healthcare excellence. Under his leadership, we have continued to grow as a symbol of trust and quality—serving clinics, labs and medical institutions with top-tier supplies that blend innovation, durability and patient-first reliability. Every product we offer echoes our core values: dependable service, industry-grade assurance and a better, healthier tomorrow. </p>
 							<div class="row">
 								<div class="col-lg-6">
 									<ul class="list">
@@ -760,7 +770,7 @@
 						<!-- Single Blog -->
 						<div class="single-news">
 							<div class="news-head">
-								<img src="img/blog2.jpg" alt="#">
+								<img src="img/blog2.png" alt="#">
 							</div>
 							<div class="news-body">
 								<div class="news-content">
@@ -962,7 +972,7 @@
 						<div class="col-lg-3 col-md-6 col-12">
 							<div class="single-footer">
 								<h2>About Us</h2>
-								<p>Lorem ipsum dolor sit am consectetur adipisicing elit do eiusmod tempor incididunt ut labore dolore magna.</p>
+								<p></p>
 								<!-- Social -->
 								<ul class="social">
 									<li><a href="#"><i class="icofont-facebook"></i></a></li>
