--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
 						<!-- Single Blog -->
 						<div class="single-news">
 							<div class="news-head">
-								<img src="img/blog1.jpg" alt="#">
+								<img src="img/blog1.png" alt="#">
 							</div>
 							<div class="news-body">
 								<div class="news-content">
