neduical equipment image added

--- a/index.html
+++ b/index.html
@@ -786,14 +786,15 @@
 						<!-- Single Blog -->
 						<div class="single-news">
 							<div class="news-head">
-								<img src="img/blog3.jpg" alt="#">
+								<img src="img/blog3.png" alt="MedicalEquipment">
 							</div>
 							<div class="news-body">
 								<div class="news-content">
-									<div class="date">Babyhug Diapers</div>
-									<h2><a href="blog-single.html">Soft, safe and ultra-absorbent care.</a></h2>
-									<p class="text">Soft, safe and ultra-absorbent care
-										Description: With up to 12 hours of dryness and skin-friendly material, Babyhug Diapers offer worry-free comfort for your baby—trusted by parents across India.</p>
+									<div class="date">Medical Equipment</div>
+									<h2><a href="blog-single.html">Essential devices for accurate care delivery.</a></h2>
+									<p class="text">Includes diagnostic tools like BP monitors, thermometers and oximeters, along with surgical lights, OT tables, nebulizers and suction machines—supporting hospitals and clinics in everyday patient care.
+
+									</p>
 								</div>
 							</div>
 						</div>
