--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 														Blog Details</a></li>
 												</ul>
 											</li>
-											<li><a href="contact.html">Contact Us</a></li>
+											<li><a href="#contact">Contact Us</a></li>
 										</ul>
 									</nav>
 								</div>
@@ -846,18 +846,20 @@
 		<!--/Ens clients -->
 		
 		<!-- Start Appointment -->
-		<section class="appointment">
+		<section id="contact" class="appointment">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="section-title">
-							<h2>We Are Always Ready to Help You. Book An Appointment</h2>
+							<h2>We’re Your Trusted Healthcare Supply Partner. Reach Out Anytime</h2>
 							<img src="img/section-img.png" alt="#">
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
+							<p>Supplying hospitals and clinics with certified medical products and reliable service support</p>
 						</div>
 					</div>
 				</div>
+		
 				<div class="row">
+					<!-- Contact Form -->
 					<div class="col-lg-6 col-md-12 col-12">
 						<form class="form" action="#">
 							<div class="row">
@@ -878,31 +880,6 @@
 								</div>
 								<div class="col-lg-6 col-md-6 col-12">
 									<div class="form-group">
-										<div class="nice-select form-control wide" tabindex="0"><span class="current">Department</span>
-											<ul class="list">
-												<li data-value="1" class="option selected ">Department</li>
-												<li data-value="2" class="option">Cardiac Clinic</li>
-												<li data-value="3" class="option">Neurology</li>
-												<li data-value="4" class="option">Dentistry</li>
-												<li data-value="5" class="option">Gastroenterology</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-12">
-									<div class="form-group">
-										<div class="nice-select form-control wide" tabindex="0"><span class="current">Doctor</span>
-											<ul class="list">
-												<li data-value="1" class="option selected ">Doctor</li>
-												<li data-value="2" class="option">Dr. Akther Hossain</li>
-												<li data-value="3" class="option">Dr. Dery Alex</li>
-												<li data-value="4" class="option">Dr. Jovis Karon</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-12">
-									<div class="form-group">
 										<input type="text" placeholder="Date" id="datepicker">
 									</div>
 								</div>
@@ -916,24 +893,42 @@
 								<div class="col-lg-5 col-md-4 col-12">
 									<div class="form-group">
 										<div class="button">
-											<button type="submit" class="btn">Book An Appointment</button>
+											<button type="submit" class="btn">Send Message</button>
 										</div>
 									</div>
 								</div>
 								<div class="col-lg-7 col-md-8 col-12">
-									<p>( We will be confirm by an Text Message )</p>
+									<p>( We will confirm via text message )</p>
 								</div>
 							</div>
 						</form>
 					</div>
-					<div class="col-lg-6 col-md-12 ">
-						<div class="appointment-image">
-							<img src="img/contact-img.png" alt="#">
+		
+					<!-- Contact Info and Map -->
+					<div class="col-lg-6 col-md-12 col-12">
+						<div class="contact-info" style="background: #f9f9f9; padding: 20px; border-radius: 8px;">
+							<h4>Paridhi Agencies</h4>
+							<p>11, 1st Floor, Kshitij Apartment,<br>
+							Tithal Road, Valsad - 396001<br>
+							Gujarat, India</p>
+							<p><strong>Phone:</strong><br>
+							+91 98255 74075<br>
+							+91 98980 94075<br>
+							+91 93137 87897 (Amul Patel)</p>
+							<p><strong>Email:</strong><br>paridhi.amul@gmail.com</p>
+						</div>
+						<div class="map mt-3">
+							<iframe
+								src="https://www.google.com/maps?q=11,+Kshitij+Apartment,+Tithal+Road,+Valsad,+Gujarat+396001,+India&output=embed"
+								width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy">
+							</iframe>
 						</div>
 					</div>
+		
 				</div>
 			</div>
 		</section>
+		
 		<!-- End Appointment -->
 		
 		<!-- Start Newsletter Area -->
@@ -944,7 +939,7 @@
 						<!-- Start Newsletter Form -->
 						<div class="subscribe-text ">
 							<h6>Sign up for newsletter</h6>
-							<p class="">Cu qui soleat partiendo urbanitas. Eum aperiri indoctum eu,<br> homero alterum.</p>
+							<p class="">Stay connected with Paridhi Agencies—reach out for product inquiries, support or partnership opportunities anytime.</p>
 						</div>
 						<!-- End Newsletter Form -->
 					</div>
@@ -973,7 +968,7 @@
 						<div class="col-lg-3 col-md-6 col-12">
 							<div class="single-footer">
 								<h2>About Us</h2>
-								<p></p>
+								<p>Amul Patel, owner of Paridhi Agencies, is committed to delivering quality healthcare supplies with reliable service and personal dedication.</p>
 								<!-- Social -->
 								<ul class="social">
 									<li><a href="#"><i class="icofont-facebook"></i></a></li>
@@ -1013,7 +1008,7 @@
 						<div class="col-lg-3 col-md-6 col-12">
 							<div class="single-footer">
 								<h2>Open Hours</h2>
-								<p>Lorem ipsum dolor sit ame consectetur adipisicing elit do eiusmod tempor incididunt.</p>
+								<p>We're here to assist you—connect with us during business hours for any product or service inquiries.</p>
 								<ul class="time-sidual">
 									<li class="day">Monday - Fridayp <span>8.00-20.00</span></li>
 									<li class="day">Saturday <span>9.00-18.30</span></li>
@@ -1024,7 +1019,7 @@
 						<div class="col-lg-3 col-md-6 col-12">
 							<div class="single-footer">
 								<h2>Newsletter</h2>
-								<p>subscribe to our newsletter to get allour news in your inbox.. Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
+								<p>Stay connected with Paridhi Agencies—reach out for product inquiries, support or partnership opportunities anytime.</p>
 								<form action="mail/mail.php" method="get" target="_blank" class="newsletter-inner">
 									<input name="email" placeholder="Email Address" class="common-input" onfocus="this.placeholder = ''"
 										onblur="this.placeholder = 'Your email address'" required="" type="email">
