--- a/index.html
+++ b/index.html
@@ -78,21 +78,36 @@
 		</ul>
 	 -->
 		<!-- Get Pro Button -->
-<ul class="pro-features">
-	<a class="get-pro" href="#contact">Connect</a>
-	<li class="big-title">Partner With Paridhi Agencies Today</li>
-	<li class="title">What We Can Help You With</li>
-	<li>Skilled staffing for hospice care</li>
-	<li>Flexible healthcare workforce support</li>
-	<li>Trusted professionals across Arizona</li>
-	<li>Personalized recruitment solutions</li>
-	<li>Prompt service with dedicated teams</li>
-	<div class="button">
-		<a href="#services" class="btn">View Our Services</a>
-		<a href="#contact" class="btn">Request a Callback</a>
-	</div>
-</ul>
-
+		<ul class="pro-features">
+			<a class="get-pro"style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;background:none;box-shadow:none;">
+				<img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp" style="width: 48px; height: 48px; animation: pulse 1.5s infinite; background: none;">
+			</a>
+			
+			<li class="big-title">Partner With Paridhi Agencies Today</li>
+			<li class="title">What We Can Help You With</li>
+			<li>Skilled staffing for hospice care</li>
+			<li>Flexible healthcare workforce support</li>
+			<li>Trusted professionals across Arizona</li>
+			<li>Personalized recruitment solutions</li>
+			<li>Prompt service with dedicated teams</li>
+			
+			<div class="button">
+				<a href="#services" class="btn">View Our Services</a>
+				<a href="#contact" class="btn">Request a Callback</a>
+				<a href="https://wa.me/919825574075?text=Hi%2C%20I%20visited%20your%20website%20and%20would%20like%20to%20know%20more%20about%20your%20products" target="_blank" class="btn" style="background-color: #25D366; color: white;">
+					Chat on WhatsApp
+				</a>
+			</div>
+		</ul>
+		
+		<style>
+		@keyframes pulse {
+			0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7); }
+			70% { transform: scale(1.1); box-shadow: 0 0 0 10px rgba(37, 211, 102, 0); }
+			100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(37, 211, 102, 0); }
+		}
+		</style>
+		
 		<!-- Header Area -->
 		<header class="header" >
 			<!-- Topbar -->
@@ -146,9 +161,9 @@
 													<li><a href="index.html">Home Page 1</a></li>
 												</ul>
 											</li>
-											<li><a href="#why-choose">About us </a></li>
+											<li><a href="#why-choose">Why Choose Us </a></li>
 									
-											<li><a href="#products">Products <i class="icofont-rounded-down"></i></a>
+											<li><a href="#products">Our Products <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
 													<li><a href="404.html">Disposable Medical Supplies
 													</a></li>
@@ -162,14 +177,14 @@
 													</a></li>
 												</ul>
 											</li>
-											<li><a href="#services">Services </a></li>
+											<li><a href="#services">Our Services </a></li>
 											<li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
 													<li><a href="blog-single.html">
 														Blog Details</a></li>
 												</ul>
 											</li>
-											<li><a href="#contact">Contact Us</a></li>
+											<!-- <li><a href="#contact">Contact Us</a></li> -->
 										</ul>
 									</nav>
 								</div>
@@ -177,7 +192,7 @@
 							</div>
 							<div class="col-lg-2 col-12">
 								<div class="get-quote">
-									<a href="appointment.html" class="btn">Book Appointment</a>
+									<a href="#contact" class="btn">Contact Us</a>
 								</div>
 							</div>
 						</div>
@@ -1032,19 +1047,19 @@
 			</div>
 			<!--/ End Footer Top -->
 			<!-- Copyright -->
-			<div class="copyright">
+			<!-- <div class="copyright">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-12">
 							<div class="copyright-content">
 								<p>© Copyright 2018  |  All Rights Reserved by
-									 <!-- <a href="https://www.wpthemesgrid.com" target="_blank">wpthemesgrid.com</a>  -->
+									 <a href="https://www.wpthemesgrid.com" target="_blank">wpthemesgrid.com</a>  
 								</p>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<!--/ End Copyright -->
 		</footer>
 		<!--/ End Footer Area -->
