whatsapp pop content

--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
 			
 			<li class="big-title">Partner With Paridhi Agencies Today</li>
 			<li class="title">What We Can Help You With</li>
-			<li>Skilled staffing for hospice care</li>
-			<li>Flexible healthcare workforce support</li>
-			<li>Trusted professionals across Arizona</li>
-			<li>Personalized recruitment solutions</li>
-			<li>Prompt service with dedicated teams</li>
+			<li>High-quality medical products for hospitals and healthcare facilities</li>
+<li>Reliable and cost-effective solutions for lab equipment and supplies</li>
+<li>Trusted products sourced from leading healthcare manufacturers</li>
+<li>Personalized service to meet the specific needs of healthcare professionals</li>
+<li>Timely delivery and dedicated customer support for all products</li>
+
 			
 			<div class="button">
 				<a href="#services" class="btn">View Our Services</a>
