--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
 									<p>Delivering advanced surgical and diagnostic solutions from the world's leading medical innovators </p>
 									<div class="button">
-										<a href="#" class="btn">Get Appointment</a>
+										<a href="#" class="btn">Contact Us</a>
 										<a href="#" class="btn primary">Learn More</a>
 									</div>
 								</div>
@@ -234,7 +234,7 @@
 									<h1>Delivering <span>Advanced</span> Healthcare Solutions Across <span>India</span></h1>
 									<p>From OT tables to vascular tools, we supply clinically proven technologies from global manufacturers you trust. </p>
 									<div class="button">
-										<a href="#" class="btn">Get Appointment</a>
+										<a href="#" class="btn">Contact Us</a>
 										<a href="#" class="btn primary">About Us</a>
 									</div>
 								</div>
@@ -255,7 +255,7 @@
 <p>At Paridhi Agencies, we specialize in providing skilled staffing for your healthcare needs. Our team is dedicated to ensuring the highest level of care and professionalism.</p>
 
 									<div class="button">
-										<a href="#" class="btn">Get Appointment</a>
+										<a href="#" class="btn">Contact Us</a>
 										<a href="#" class="btn primary">Conatct Now</a>
 									</div>
 								</div>
