--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
 									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
 									<p>Delivering advanced surgical and diagnostic solutions from the world's leading medical innovators </p>
 									<div class="button">
-										<a href="#" class="btn">Contact Us</a>
-										<a href="#" class="btn primary">Learn More</a>
+										<a href="#contact" class="btn">Contact Us</a>
+										<a href="#why-choose" class="btn primary">About Us</a>
 									</div>
 								</div>
 							</div>
@@ -507,7 +507,7 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porttitor dictum turpis nec gravida.</p>
 							<div class="button">
 								<a href="#" class="btn">Contact Now</a>
-								<a href="#" class="btn second">Learn More<i class="fa fa-long-arrow-right"></i></a>
+								<a href="#contact" class="btn second">About Us<i class="fa fa-long-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
