--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 				</div>
 				<!-- End Single Slider -->
 				<!-- Start Single Slider -->
-				<div class="single-slider" style="background-image:url('img/7.jpg')">
+				<div class="single-slider" style="background-image:url('img/sliderupdated.jpg')">
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-7">
