--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
 										<ul class="nav menu">
 											<li class="active"><a href="#">Home <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="index.html">Home Page 1</a></li>
+													<li><a href="index.html">Home</a></li>
 												</ul>
 											</li>
-											<li><a href="#why-choose">Why Choose Us </a></li>
+											<li><a href="#about">Why Choose Us </a></li>
 									
 											<li><a href="#products">Our Products <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
@@ -234,8 +234,8 @@
 									<h1>Delivering <span>Advanced</span> Healthcare Solutions Across <span>India</span></h1>
 									<p>From OT tables to vascular tools, we supply clinically proven technologies from global manufacturers you trust. </p>
 									<div class="button">
-										<a href="#" class="btn">Contact Us</a>
-										<a href="#" class="btn primary">About Us</a>
+										<a href="#contact" class="btn">Contact Us</a>
+										<a href="#about" class="btn primary">About Us</a>
 									</div>
 								</div>
 							</div>
@@ -255,8 +255,8 @@
 <p>At Paridhi Agencies, we specialize in providing skilled staffing for your healthcare needs. Our team is dedicated to ensuring the highest level of care and professionalism.</p>
 
 									<div class="button">
-										<a href="#" class="btn">Contact Us</a>
-										<a href="#" class="btn primary">Conatct Now</a>
+										<a href="#about" class="btn">About Us</a>
+										<a href="#contact" class="btn primary">Contact Now</a>
 									</div>
 								</div>
 							</div>
@@ -437,7 +437,7 @@
 		<!--/ End Fun-facts -->
 		
 		<!-- Start Why choose -->
-		<section id="why-choose" class="why-choose section" >
+		<section id="about" class="why-choose section" >
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
