--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<!-- Contact -->
 							<ul class="top-link">
 								<li><a href="#">About</a></li>
-								<li><a href="#">Doctors</a></li>
+								<li><a href="#">Products</a></li>
 								<li><a href="#">Contact</a></li>
 								<li><a href="#">FAQ</a></li>
 							</ul>
@@ -179,12 +179,12 @@
 												</ul>
 											</li>
 											<li><a href="#services">Our Services </a></li>
-											<li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
+											<!-- <li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
 													<li><a href="blog-single.html">
 														Blog Details</a></li>
 												</ul>
-											</li>
+											</li> -->
 											<!-- <li><a href="#contact">Contact Us</a></li> -->
 										</ul>
 									</nav>
@@ -338,9 +338,9 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="section-title">
-							<h2>We Are Always Ready to Help You & Your Family</h2>
+							<h2>Supporting Better Healthcare with Trusted Supplies</h2>
 							<img src="img/section-img.png" alt="#">
-							<p> At Paridhi Agencies, we ensure a hygienic and safe environment by using products from top healthcare brands like Meril, Omron, 3M, and Fresenius Kabi. Our cleanliness protocols meet the highest standards for the protection and well-being of all patients and staff.</p>
+							<p> At Paridhi Agencies, We are committed to ensuring the well-being of patients and healthcare professionals by providing reliable, quality medical and diagnostic products.</p>
 						</div>
 					</div>
 				</div>
@@ -351,8 +351,8 @@
 							<div class="signle-icon">
 								<i class="icofont icofont-ambulance-cross"></i>
 							</div>
-							<h3>Emergency Help</h3>
-							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
+							<h3>Wholesale Medical Supply</h3>
+							<p>We offer a wide range of surgical disposables, hospital furniture, lab instruments, and rehabilitation products for hospitals, clinics, and diagnostic centers.</p>
 						</div>
 						<!-- End Single features -->
 					</div>
@@ -362,8 +362,8 @@
 							<div class="signle-icon">
 								<i class="icofont icofont-medical-sign-alt"></i>
 							</div>
-							<h3>Enriched Pharmecy</h3>
-							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
+							<h3>Trusted Brand Stockist</h3>
+							<p>Partnering with leading healthcare brands, we ensure timely delivery of certified medical supplies and consumables across the region.</p>
 						</div>
 						<!-- End Single features -->
 					</div>
@@ -373,8 +373,8 @@
 							<div class="signle-icon">
 								<i class="icofont icofont-stethoscope"></i>
 							</div>
-							<h3>Medical Treatment</h3>
-							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
+							<h3>Serving Hospitals & Labs</h3>
+							<p>From emergency medical consumables to routine diagnostic products, we support smooth healthcare operations with dependable supplies.							</p>
 						</div>
 						<!-- End Single features -->
 					</div>
@@ -392,8 +392,8 @@
 						<div class="single-fun">
 							<i class="icofont icofont-home"></i>
 							<div class="content">
-								<span class="counter">3468</span>
-								<p>Hospital Rooms</p>
+								<span class="counter">1200</span>
+								<p>Hospitals & Labs Supplied</p>
 							</div>
 						</div>
 						<!-- End Single Fun -->
@@ -403,8 +403,8 @@
 						<div class="single-fun">
 							<i class="icofont icofont-user-alt-3"></i>
 							<div class="content">
-								<span class="counter">557</span>
-								<p>Specialist Doctors</p>
+								<span class="counter">250</span>
+								<p>Top Healthcare Brands Stocked</p>
 							</div>
 						</div>
 						<!-- End Single Fun -->
@@ -414,8 +414,8 @@
 						<div class="single-fun">
 							<i class="icofont-simple-smile"></i>
 							<div class="content">
-								<span class="counter">4379</span>
-								<p>Happy Patients</p>
+								<span class="counter">5000</span>
+								<p>Orders Delivered</p>
 							</div>
 						</div>
 						<!-- End Single Fun -->
@@ -425,7 +425,7 @@
 						<div class="single-fun">
 							<i class="icofont icofont-table"></i>
 							<div class="content">
-								<span class="counter">32</span>
+								<span class="counter">30 </span>
 								<p>Years of Experience</p>
 							</div>
 						</div>
@@ -503,11 +503,11 @@
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-12">
 						<div class="content">
-							<h2>Do you need Emergency Medical Care? Call @ 1234 56789</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porttitor dictum turpis nec gravida.</p>
+							<h2>Need Urgent Medical Supplies? Call @ 1234 56789</h2>
+							<p>Get quick support for emergency hospital consumables, diagnostic products, and critical care supplies. We ensure fast response and timely delivery to your doorstep.						</p>
 							<div class="button">
-								<a href="#" class="btn">Contact Now</a>
-								<a href="#contact" class="btn second">About Us<i class="fa fa-long-arrow-right"></i></a>
+								<a href="#contact" class="btn">Contact Now</a>
+								<!-- <a href="#contact" class="btn second">About Us<i class="fa fa-long-arrow-right"></i></a> -->
 							</div>
 						</div>
 					</div>
@@ -779,48 +779,49 @@
 				<div class="row">
 					<!-- Contact Form -->
 					<div class="col-lg-6 col-md-12 col-12">
-						<form class="form" action="#">
-							<div class="row">
-								<div class="col-lg-6 col-md-6 col-12">
-									<div class="form-group">
-										<input name="name" type="text" placeholder="Name">
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-12">
-									<div class="form-group">
-										<input name="email" type="email" placeholder="Email">
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-12">
-									<div class="form-group">
-										<input name="phone" type="text" placeholder="Phone">
-									</div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-12">
-									<div class="form-group">
-										<input type="text" placeholder="Date" id="datepicker">
-									</div>
-								</div>
-								<div class="col-lg-12 col-md-12 col-12">
-									<div class="form-group">
-										<textarea name="message" placeholder="Write Your Message Here....."></textarea>
-									</div>
-								</div>
+						<form class="form" action="thankyou.html" method="get">
+						  <div class="row">
+							<div class="col-lg-6 col-md-6 col-12">
+							  <div class="form-group">
+								<input name="name" type="text" placeholder="Name">
+							  </div>
 							</div>
-							<div class="row">
-								<div class="col-lg-5 col-md-4 col-12">
-									<div class="form-group">
-										<div class="button">
-											<button type="submit" class="btn">Send Message</button>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-7 col-md-8 col-12">
-									<p>( We will confirm via text message )</p>
-								</div>
+							<div class="col-lg-6 col-md-6 col-12">
+							  <div class="form-group">
+								<input name="email" type="email" placeholder="Email">
+							  </div>
 							</div>
+							<div class="col-lg-6 col-md-6 col-12">
+							  <div class="form-group">
+								<input name="phone" type="text" placeholder="Phone">
+							  </div>
+							</div>
+							<div class="col-lg-6 col-md-6 col-12">
+							  <div class="form-group">
+								<!-- Added name="date" here -->
+								<input name="date" type="text" placeholder="Date" id="datepicker">
+							  </div>
+							</div>
+							<div class="col-lg-12 col-md-12 col-12">
+							  <div class="form-group">
+								<textarea name="message" placeholder="Write Your Message Here....."></textarea>
+							  </div>
+							</div>
+						  </div>
+						  <div class="row">
+							<div class="col-lg-5 col-md-4 col-12">
+							  <div class="form-group">
+								<div class="button">
+								  <button   class="btn"><a href="thankyou.html">Send Message </a></button>
+								</div>
+							  </div>
+							</div>
+							<div class="col-lg-7 col-md-8 col-12">
+							  <p>( We will confirm via text message )</p>
+							</div>
+						  </div>
 						</form>
-					</div>
+					  </div>
 		
 					<!-- Contact Info and Map -->
 					<div class="col-lg-6 col-md-12 col-12">
