--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>Paridhi Agencies | Leading Supplier & Stockist of Surgical Instruments, Medical Equipment & Healthcare Products in India.</title>
 		
 		<!-- Favicon -->
-        <link rel="icon" href="img/favicon.png">
+        <link rel="icon" href="img/favicon-96x96.png" type="image/png">
 		
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
