--- a/thankyou.html
+++ b/thankyou.html
@@ -11,6 +11,6 @@
     <h1>Thank You! 🎉</h1>
     <p>Your message has been sent successfully.</p>
     <p>We'll contact you shortly.</p>
-    <a href="/">← Back to Home</a>
+    <a href="https://www.paridhiagencies.com/">← Back to Home</a>
 </body>
 </html>
